// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileAppConnection if we disconnect the app, it disconnects and fetches a new QR code 1`] = `<div />`;

exports[`MobileAppConnection it shows a QR code if the app isn't already connected 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="root container__box root_bordered root_shadowed root--withBackground"
    >
      <div
        class="css-1j7sh2x-vertical-group"
        style="width: 100%; height: 100%;"
      >
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <span
            class="root text text--primary text--medium text--strong"
          >
            Download
          </span>
        </div>
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <span
            class="root text text--primary text--medium"
          >
            The Grafana IRM app is available on both the App Store and Google Play Store.
          </span>
        </div>
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-bxa289-layoutChildrenWrapper"
            >
              <div
                class="root icon-block root_bordered root--fullWidth root--withBackground root--hover"
              >
                <img
                  alt="Apple"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="root text icon-text text--primary text--medium"
                >
                  iOS
                </span>
              </div>
            </div>
            <div
              class="css-bxa289-layoutChildrenWrapper"
            >
              <div
                class="root icon-block root_bordered root--fullWidth root--hover"
              >
                <img
                  alt="Play Store"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="root text icon-text text--primary text--medium"
                >
                  Android
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root container__box root_bordered root_shadowed root--withBackground"
    >
      <div
        class="css-lq6a48"
      >
        Loading...
         
        <div
          class="css-13pg8vy"
          data-testid="Spinner"
        >
          <i
            class="fa fa-spinner fa-spin fa-spin"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a loading message if it is currently disconnecting 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="root container__box root_bordered root_shadowed root--withBackground"
    >
      <div
        class="css-1j7sh2x-vertical-group"
        style="width: 100%; height: 100%;"
      >
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <span
            class="root text text--primary text--medium text--strong"
          >
            Download
          </span>
        </div>
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <span
            class="root text text--primary text--medium"
          >
            The Grafana IRM app is available on both the App Store and Google Play Store.
          </span>
        </div>
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-bxa289-layoutChildrenWrapper"
            >
              <div
                class="root icon-block root_bordered root--fullWidth root--withBackground root--hover"
              >
                <img
                  alt="Apple"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="root text icon-text text--primary text--medium"
                >
                  iOS
                </span>
              </div>
            </div>
            <div
              class="css-bxa289-layoutChildrenWrapper"
            >
              <div
                class="root icon-block root_bordered root--fullWidth root--hover"
              >
                <img
                  alt="Play Store"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="root text icon-text text--primary text--medium"
                >
                  Android
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root container__box root_bordered root_shadowed root--withBackground"
    >
      <div
        class="css-lq6a48"
      >
        Loading...
         
        <div
          class="css-13pg8vy"
          data-testid="Spinner"
        >
          <i
            class="fa fa-spinner fa-spin fa-spin"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a loading message if it is currently fetching the QR code 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="root container__box root_bordered root_shadowed root--withBackground"
    >
      <div
        class="css-1j7sh2x-vertical-group"
        style="width: 100%; height: 100%;"
      >
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <span
            class="root text text--primary text--medium text--strong"
          >
            Download
          </span>
        </div>
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <span
            class="root text text--primary text--medium"
          >
            The Grafana IRM app is available on both the App Store and Google Play Store.
          </span>
        </div>
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-bxa289-layoutChildrenWrapper"
            >
              <div
                class="root icon-block root_bordered root--fullWidth root--withBackground root--hover"
              >
                <img
                  alt="Apple"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="root text icon-text text--primary text--medium"
                >
                  iOS
                </span>
              </div>
            </div>
            <div
              class="css-bxa289-layoutChildrenWrapper"
            >
              <div
                class="root icon-block root_bordered root--fullWidth root--hover"
              >
                <img
                  alt="Play Store"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="root text icon-text text--primary text--medium"
                >
                  Android
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root container__box root_bordered root_shadowed root--withBackground"
    >
      <div
        class="css-lq6a48"
      >
        Loading...
         
        <div
          class="css-13pg8vy"
          data-testid="Spinner"
        >
          <i
            class="fa fa-spinner fa-spin fa-spin"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a message when the mobile app is already connected 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="root container__box root_bordered root_shadowed root--withBackground"
    >
      <div
        class="css-1j7sh2x-vertical-group"
        style="width: 100%; height: 100%;"
      >
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <span
            class="root text text--primary text--medium text--strong"
          >
            Download
          </span>
        </div>
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <span
            class="root text text--primary text--medium"
          >
            The Grafana IRM app is available on both the App Store and Google Play Store.
          </span>
        </div>
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-bxa289-layoutChildrenWrapper"
            >
              <div
                class="root icon-block root_bordered root--fullWidth root--withBackground root--hover"
              >
                <img
                  alt="Apple"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="root text icon-text text--primary text--medium"
                >
                  iOS
                </span>
              </div>
            </div>
            <div
              class="css-bxa289-layoutChildrenWrapper"
            >
              <div
                class="root icon-block root_bordered root--fullWidth root--hover"
              >
                <img
                  alt="Play Store"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="root text icon-text text--primary text--medium"
                >
                  Android
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root container__box root_bordered root_shadowed root--withBackground"
    >
      <div
        class="css-1j7sh2x-vertical-group"
        style="width: 100%; height: 100%;"
      >
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <span
            class="root text text--primary text--medium text--strong"
          >
            App connected 
            <div
              class="css-wf08df-Icon"
            >
              <svg
                class="css-eyx4do icon"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M14.72,8.79l-4.29,4.3L8.78,11.44a1,1,0,1,0-1.41,1.41l2.35,2.36a1,1,0,0,0,.71.29,1,1,0,0,0,.7-.29l5-5a1,1,0,0,0,0-1.42A1,1,0,0,0,14.72,8.79ZM12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
                />
              </svg>
            </div>
          </span>
        </div>
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <span
            class="root text text--primary text--medium"
          >
            You can sync one application to your account. To setup new device please disconnect app first.
          </span>
        </div>
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <div
            class="disconnect__container"
          >
            <img
              class="disconnect__qrCode"
              src="[object Object]"
            />
            <button
              class="css-mk7eo3-button disconnect-button"
              data-testid="test__disconnect"
              type="button"
            >
              <span
                class="css-1mhnkuh"
              >
                Disconnect
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a warning when cloud is not connected 1`] = `
<div>
  <div
    class="css-1j7sh2x-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-ztyofd-layoutChildrenWrapper"
    >
      <span
        class="root text text--secondary text--medium"
      >
        Please connect Cloud OnCall to use the mobile app
      </span>
    </div>
    <div
      class="css-ztyofd-layoutChildrenWrapper"
    >
      <a
        class="root"
        href="/a/grafana-oncall-app/cloud"
      >
        <button
          class="css-1a8393j-button"
          type="button"
        >
          <div
            class="css-wf08df-Icon"
          >
            <svg
              class="css-1gebccs"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18,10.82a1,1,0,0,0-1,1V19a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V8A1,1,0,0,1,5,7h7.18a1,1,0,0,0,0-2H5A3,3,0,0,0,2,8V19a3,3,0,0,0,3,3H16a3,3,0,0,0,3-3V11.82A1,1,0,0,0,18,10.82Zm3.92-8.2a1,1,0,0,0-.54-.54A1,1,0,0,0,21,2H15a1,1,0,0,0,0,2h3.59L8.29,14.29a1,1,0,0,0,0,1.42,1,1,0,0,0,1.42,0L20,5.41V9a1,1,0,0,0,2,0V3A1,1,0,0,0,21.92,2.62Z"
              />
            </svg>
          </div>
          <span
            class="css-1mhnkuh"
          >
            Connect Cloud OnCall
          </span>
        </button>
      </a>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows an error message if there was an error disconnecting the mobile app 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="root container__box root_bordered root_shadowed root--withBackground"
    >
      <div
        class="css-1j7sh2x-vertical-group"
        style="width: 100%; height: 100%;"
      >
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <span
            class="root text text--primary text--medium text--strong"
          >
            Download
          </span>
        </div>
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <span
            class="root text text--primary text--medium"
          >
            The Grafana IRM app is available on both the App Store and Google Play Store.
          </span>
        </div>
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-bxa289-layoutChildrenWrapper"
            >
              <div
                class="root icon-block root_bordered root--fullWidth root--withBackground root--hover"
              >
                <img
                  alt="Apple"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="root text icon-text text--primary text--medium"
                >
                  iOS
                </span>
              </div>
            </div>
            <div
              class="css-bxa289-layoutChildrenWrapper"
            >
              <div
                class="root icon-block root_bordered root--fullWidth root--hover"
              >
                <img
                  alt="Play Store"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="root text icon-text text--primary text--medium"
                >
                  Android
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root container__box root_bordered root_shadowed root--withBackground"
    >
      <span
        class="root text text--primary text--medium"
      >
        There was an error disconnecting your mobile app. Please try again.
      </span>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows an error message if there was an error fetching the QR code 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="root container__box root_bordered root_shadowed root--withBackground"
    >
      <div
        class="css-1j7sh2x-vertical-group"
        style="width: 100%; height: 100%;"
      >
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <span
            class="root text text--primary text--medium text--strong"
          >
            Download
          </span>
        </div>
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <span
            class="root text text--primary text--medium"
          >
            The Grafana IRM app is available on both the App Store and Google Play Store.
          </span>
        </div>
        <div
          class="css-ztyofd-layoutChildrenWrapper"
        >
          <div
            class="css-1j7sh2x-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-bxa289-layoutChildrenWrapper"
            >
              <div
                class="root icon-block root_bordered root--fullWidth root--withBackground root--hover"
              >
                <img
                  alt="Apple"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="root text icon-text text--primary text--medium"
                >
                  iOS
                </span>
              </div>
            </div>
            <div
              class="css-bxa289-layoutChildrenWrapper"
            >
              <div
                class="root icon-block root_bordered root--fullWidth root--hover"
              >
                <img
                  alt="Play Store"
                  class="icon"
                  src="[object Object]"
                />
                <span
                  class="root text icon-text text--primary text--medium"
                >
                  Android
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="root container__box root_bordered root_shadowed root--withBackground"
    >
      <span
        class="root text text--primary text--medium"
      >
        There was an error fetching your QR code. Please try again.
      </span>
    </div>
  </div>
</div>
`;
